[project]
name = "kufar-alerts"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.20.0",
    "aiohttp==3.10.11",
    "aiosqlite==0.21.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "api/index.py"